completed random-number-generator project

--- a/random-number-generator/index.html
+++ b/random-number-generator/index.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-center">
+            <h1>Random Number Generator</h1>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <p>Generate a Random Number between 1 to 100</p>
+            <h2><span class="number">Random Number</span></h2>
+            <button class="btn" id="btn">click me!</button>
+        </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
